--- a/1_tables.ipynb
+++ b/1_tables.ipynb
@@ -194,13 +194,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Бинарные форматы"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "# Бинарные форматы\n",
+    "\n",
     "Общий подход: это [погуглить](http://googleitfor.me/?q=tiff+open+in+python) модуль Питона, который умеет делать то, что вам нужно. Попробуйте узнать как прочесть картинку формата TIFF в Питоне"
    ]
   },
@@ -222,7 +217,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Чтение NetCDF"
+    "## Чтение NetCDF\n",
+    "\n",
+    "Возьмём файл с температурой поверхности океана с [сайта UCAR](https://www.unidata.ucar.edu/software/netcdf/examples/files.html): <https://www.unidata.ucar.edu/software/netcdf/examples/tos_O1_2001-2002.nc>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "273.07037"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from scipy.io import netcdf\n",
+    "with netcdf.netcdf_file('tos_O1_2001-2002.nc', mmap=False) as netcdf_file:\n",
+    "    variables = netcdf_file.variables\n",
+    "time_index = 6\n",
+    "lat_index = 155\n",
+    "lon_index = 37\n",
+    "variables['tos'][time_index, lat_index, lon_index]"
    ]
   },
   {
