Update first seminar

--- a/1_tables.ipynb
+++ b/1_tables.ipynb
@@ -8,6 +8,30 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 1.00e+00  1.00e+01  5.53e+01 -1.00e+23]\n",
+      "[ 2.000e+00  2.000e+01  1.106e+02 -2.000e+23]\n",
+      "[1.00000e+00 1.00000e+02 3.05809e+03 1.00000e+46]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "a = np.array([1, 10, 55.3, -1e23])\n",
+    "print(a)\n",
+    "print(2 * a)\n",
+    "print(a**2)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -203,14 +227,54 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## HDF"
+    "## FITS\n",
+    "Будем использовать изображние галактики Сомбреро"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[3 3 3 ... 0 0 0]\n",
+      " [3 3 3 ... 0 0 0]\n",
+      " [3 3 3 ... 1 1 1]\n",
+      " ...\n",
+      " [5 5 5 ... 4 5 5]\n",
+      " [5 5 5 ... 1 3 2]\n",
+      " [5 5 5 ... 3 5 2]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from astropy.io import fits\n",
+    "from PIL import Image\n",
+    "\n",
+    "with fits.open('sombrero.fits') as fits_file:\n",
+    "    hdu = fits_file[0]\n",
+    "    data = hdu.data\n",
+    "print(data)\n",
+    "image = Image.fromarray(data[::-1])\n",
+    "image.save('sombrero.png')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## FITS"
+    "`sombrero.png`\n",
+    "![sombrero image](sombrero.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## HDF"
    ]
   },
   {
@@ -240,6 +304,7 @@
    ],
    "source": [
     "from scipy.io import netcdf\n",
+    "\n",
     "with netcdf.netcdf_file('tos_O1_2001-2002.nc', mmap=False) as netcdf_file:\n",
     "    variables = netcdf_file.variables\n",
     "time_index = 6\n",
@@ -274,6 +339,14 @@
     "plt.legend()\n",
     "plt.grid()\n",
     "plt.savefig('matplotlib.png')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`matplotlib.png`\n",
+    "![matplotlib image](matplotlib.png)"
    ]
   },
   {
