--- a/1_tables.ipynb
+++ b/1_tables.ipynb
@@ -317,7 +317,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Построение графиков с `matplotlib`"
+    "# Построение графиков с `matplotlib`\n",
+    "## Простой пример"
    ]
   },
   {
@@ -346,7 +347,8 @@
    "metadata": {},
    "source": [
     "`matplotlib.png`\n",
-    "![matplotlib image](matplotlib.png)"
+    "![matplotlib image](matplotlib.png)\n",
+    "## Контурные карты"
    ]
   },
   {
