Add more about numpy

--- a/1_tables.ipynb
+++ b/1_tables.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -18,7 +18,11 @@
      "text": [
       "[ 1.00e+00  1.00e+01  5.53e+01 -1.00e+23]\n",
       "[ 2.000e+00  2.000e+01  1.106e+02 -2.000e+23]\n",
-      "[1.00000e+00 1.00000e+02 3.05809e+03 1.00000e+46]\n"
+      "[1.00000e+00 1.00000e+02 3.05809e+03 1.00000e+46]\n",
+      "(4,)\n",
+      "4\n",
+      "float64\n",
+      "<class 'numpy.ndarray'>\n"
      ]
     }
    ],
@@ -28,7 +32,69 @@
     "a = np.array([1, 10, 55.3, -1e23])\n",
     "print(a)\n",
     "print(2 * a)\n",
-    "print(a**2)"
+    "print(a**2)\n",
+    "print(a.shape)\n",
+    "print(a.size)\n",
+    "assert np.prod(a.shape) == a.size\n",
+    "assert len(a.shape) == a.ndim\n",
+    "print(a.dtype)\n",
+    "print(type(a))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[9 8 7]\n",
+      " [6 5 4]\n",
+      " [3 2 1]]\n",
+      "[[18 16 14]\n",
+      " [12 10  8]\n",
+      " [ 6  4  2]]\n",
+      "[[18 24 28]\n",
+      " [12 15 16]\n",
+      " [ 6  6  4]]\n",
+      "(3, 3)\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "b = np.array([[9, 8, 7],\n",
+    "              [6, 5, 4],\n",
+    "              [3, 2, 1]])\n",
+    "print(b)\n",
+    "print(2 * b)\n",
+    "print(b * [2, 3, 4])\n",
+    "print(b.shape)\n",
+    "print(b.size)\n",
+    "assert np.prod(a.shape) == a.size\n",
+    "assert len(b.shape) == b.ndim"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "int64\n",
+      "-3535985420588157519 42391158275216203514294433201 Почему числа не равны?\n"
+     ]
+    }
+   ],
+   "source": [
+    "int_b = b.astype(int)\n",
+    "print(int_b.dtype)\n",
+    "print(int_b[0,0]**30, int(b[0,0])**30, 'Почему числа не равны?')"
    ]
   },
   {
@@ -39,10 +105,371 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 1 2 3 4 5 6 7 8 9]\n",
+      "[10  9  8  7  6  5  4  3  2  1  0]\n",
+      "[0.         0.33333333 0.66666667 1.         1.33333333 1.66666667\n",
+      " 2.         2.33333333]\n",
+      "[0.         0.33333333 0.66666667 1.         1.33333333 1.66666667\n",
+      " 2.        ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.arange(10)  # как range, но создает numpy.ndarray\n",
+    "print(a)\n",
+    "a = np.arange(10, -1, -1)\n",
+    "print(a)\n",
+    "# Если мы хотим создать сетку, то лучше не использовать эту функцию\n",
+    "# Смотрите сами, предположим нам нужны точки от 0 до 2 включительно c шагом 1/3:\n",
+    "a = np.arange(0, 2 + 1/3, 1/3)\n",
+    "print(a)\n",
+    "# Другое дело с np.linspace:\n",
+    "a = np.linspace(0, 2, 7)\n",
+    "print(a)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Срезы"
+    "### Пустой массив\n",
+    "Если вам нужно лишь выделить память, а сам массив вы заполните потом:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Тут лажеит «мусор», но не случайный:\n",
+      " [0.0e+000 4.9e-324 9.9e-324 1.5e-323 2.0e-323 2.5e-323 3.0e-323 3.5e-323\n",
+      " 4.0e-323 4.4e-323]\n",
+      "Тоже мусор, но разложенный по-другому:\n",
+      " [[2.31584178e+077 2.31584178e+077 2.96439388e-323 0.00000000e+000]\n",
+      " [2.31584178e+077 1.61590357e+184 6.86889100e-091 3.73455097e-061]\n",
+      " [3.61296025e+174 1.47862178e+185 3.99910963e+252 8.80225074e-309]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.empty(10, dtype=np.float)\n",
+    "print('Тут лажеит «мусор», но не случайный:\\n', a)\n",
+    "a = np.empty((3, 4))  # Можно указывать любой shape\n",
+    "print('Тоже мусор, но разложенный по-другому:\\n', a)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Заполненные массивы\n",
+    "В качестве первого аргумента всегда `shape` создаваемого массива или целое число, если массив одномерный\n",
+    "В современном `numpy` тип элементов (`dtype`) по-умолчанию — `float`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      "[[255 255]\n",
+      " [255 255]\n",
+      " [255 255]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "zeros_float = np.zeros(10)\n",
+    "print(zeros_float)\n",
+    "uint8 = np.zeros((3, 2), dtype=np.uint8)\n",
+    "uint8 -= 1\n",
+    "print(uint8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1.]\n",
+      "[['1' '1']\n",
+      " ['1' '1']]\n"
+     ]
+    }
+   ],
+   "source": [
+    "ones_float = np.ones(11)\n",
+    "print(ones_float)\n",
+    "ones_str = np.ones((2, 2), dtype=str)\n",
+    "print(ones_str)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[2 2 2 2]\n",
+      " [2 2 2 2]\n",
+      " [2 2 2 2]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "twos = np.full((3, 4), 2, dtype=int)\n",
+    "print(twos)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Если вам нужно создать новый массив по форме и, быть может, по типу элементов похожий на старый, то используйте функции `np.*_like()`. Они работают точно как предыдущие функции, но в качестве первого элемента принимают не размер, а другой массив."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3 3 3 3 3 3 3 3]\n",
+      "[3.14159265 3.14159265 3.14159265 3.14159265 3.14159265 3.14159265\n",
+      " 3.14159265 3.14159265]\n",
+      "Пустой b:\n",
+      " [2.31584178e+077+2.31584178e+077j 2.41907520e-312+2.14321575e-312j\n",
+      " 2.46151512e-312+2.31297541e-312j 2.35541533e-312+2.05833592e-312j\n",
+      " 2.22809558e-312+2.56761491e-312j 2.48273508e-312+2.05833592e-312j\n",
+      " 2.05833592e-312+2.29175545e-312j 2.07955588e-312+2.14321575e-312j]\n",
+      "Заполненный b:\n",
+      " [0.        +3.14159265j 0.        +3.14159265j 0.        +3.14159265j\n",
+      " 0.        +3.14159265j 3.14159265+1.j         3.14159265+1.j\n",
+      " 3.14159265+1.j         3.14159265+1.j        ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "arange = np.arange(8, dtype=int)\n",
+    "\n",
+    "zeros = np.zeros_like(arange)\n",
+    "\n",
+    "pis = np.full_like(arange, np.pi)\n",
+    "print(pis)\n",
+    "assert pis.dtype is arange.dtype\n",
+    "pis = np.full_like(arange, np.pi, dtype=float)\n",
+    "print(pis)\n",
+    "\n",
+    "b = np.empty_like(arange, dtype=complex)\n",
+    "print('Пустой b:\\n', b)\n",
+    "n = arange.shape[0]\n",
+    "b[:n//2] = zeros[:n//2] + 1j * pis[:n//2]\n",
+    "b[n//2:] = pis[n//2:] + 1j * np.ones(n//2)\n",
+    "print('Заполненный b:\\n', b)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Срезы\n",
+    "### Одномерье"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 1 2 3 4 5 6 7 8 9]\n",
+      "Первые 5 элементов: [0 1 2 3 4]\n",
+      "Последние 3 элемента: [7 8 9]\n",
+      "Элементы между 2 и 8 не включительно с шагом 3: [2 5]\n",
+      "Задом наперёд: [9 8 7 6 5 4 3 2 1 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.arange(10)\n",
+    "print(a)\n",
+    "print('Первые 5 элементов:', a[:5])\n",
+    "print('Последние 3 элемента:', a[-3:])\n",
+    "print('Элементы между 2 и 8 не включительно с шагом 3:', a[2:8:3])\n",
+    "print('Задом наперёд:', a[::-1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Помните про объектную модель Питона: переменная — это ссылка на массив, а не сам массив"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-100.    1.    2.    3.    4.] [-100.    1.    2.    3.    4.]\n",
+      "Пустой массив: [100.   1.   2.   3.   4.]\n",
+      "Старый массив и бывший пустым массив: [-100.    1.    2.    3.    4.] [2.71828183 1.         2.         3.         4.        ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.arange(5, dtype=np.float)\n",
+    "b = a\n",
+    "assert np.array_equal(a, b)\n",
+    "assert a is b\n",
+    "b[0] = -100\n",
+    "print(a, b)\n",
+    "\n",
+    "c = np.empty_like(a)\n",
+    "print('Пустой массив:', c)\n",
+    "c[:] = a\n",
+    "c[0] = np.exp(1)\n",
+    "print('Старый массив и бывший пустым массив:', a, c)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Более простой способ скопировать массив целиком — это метод `.copy()`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0. 0. 0. 0. 0.] [-100.    0.    0.    0.    0.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.zeros(5)\n",
+    "b = a.copy()\n",
+    "assert np.array_equal(a, b)\n",
+    "assert b is not a\n",
+    "b[0] = -100\n",
+    "print(a, b)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Многомерье"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0  1  2  3  4]\n",
+      " [ 5  6  7  8  9]\n",
+      " [10 11 12 13 14]]\n",
+      "Последний элемент: 14\n",
+      "Вторая (индекс 1) строка: [5 6 7 8 9]\n",
+      "Второй с конца столбец: [ 3  8 13]\n",
+      "Чётные столбцы:\n",
+      " [[ 0  2  4]\n",
+      " [ 5  7  9]\n",
+      " [10 12 14]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.arange(15).reshape(3, 5)\n",
+    "print(a)\n",
+    "print('Последний элемент:', a[-1, -1])\n",
+    "print('Вторая (индекс 1) строка:', a[1])\n",
+    "print('Второй с конца столбец:', a[:, -2])\n",
+    "print('Чётные столбцы:\\n', a[:, ::2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(4, 4)\n",
+      "(16,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.arange(16)\n",
+    "b1 = a.reshape(4, 4)\n",
+    "b2 = a.reshape(4, -1)\n",
+    "b3 = a.reshape(-1, 4)\n",
+    "assert b1.shape == b2.shape == b3.shape\n",
+    "assert np.array_equal(b1, b2)\n",
+    "assert np.array_equal(b1, b3)\n",
+    "a.resize(4, 4)\n",
+    "print(a.shape)\n",
+    "a.shape = 16\n",
+    "print(a.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Что-то про [np.newaxis]"
    ]
   },
   {
@@ -75,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -297,7 +724,7 @@
        "273.07037"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -323,7 +750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
