--- a/1_tables.ipynb
+++ b/1_tables.ipynb
@@ -288,7 +288,7 @@
     "print(pis)\n",
     "\n",
     "b = np.empty_like(arange, dtype=complex)\n",
-    "print('Пустой b:\\n', b)\n",
+    "print('«Пустой» b:\\n', b)\n",
     "n = arange.shape[0]\n",
     "b[:n//2] = zeros[:n//2] + 1j * pis[:n//2]\n",
     "b[n//2:] = pis[n//2:] + 1j * np.ones(n//2)\n",
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -347,7 +347,7 @@
      "text": [
       "[-100.    1.    2.    3.    4.] [-100.    1.    2.    3.    4.]\n",
       "Пустой массив: [100.   1.   2.   3.   4.]\n",
-      "Старый массив и бывший пустым массив: [-100.    1.    2.    3.    4.] [2.71828183 1.         2.         3.         4.        ]\n"
+      "Старый массив и бывший пустым массивы: [-100.    1.    2.    3.    4.] [2.71828183 1.         2.         3.         4.        ]\n"
      ]
     }
    ],
@@ -363,7 +363,7 @@
     "print('Пустой массив:', c)\n",
     "c[:] = a\n",
     "c[0] = np.exp(1)\n",
-    "print('Старый массив и бывший пустым массив:', a, c)"
+    "print('Старый массив и бывший пустым массивы:', a, c)"
    ]
   },
   {
@@ -404,6 +404,32 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0  1  2  3  4]\n",
+      " [ 5  6  7  8  9]\n",
+      " [10 11 12 13 14]]\n",
+      "[[ 0  5 10]\n",
+      " [ 1  6 11]\n",
+      " [ 2  7 12]\n",
+      " [ 3  8 13]\n",
+      " [ 4  9 14]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.arange(15).reshape(3, 5)\n",
+    "print(a)\n",
+    "print(a.T)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 13,
    "metadata": {
     "scrolled": true
@@ -437,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -445,31 +471,98 @@
      "output_type": "stream",
      "text": [
       "(4, 4)\n",
-      "(16,)\n"
+      "(16,)\n",
+      "[[[ 0  1  2  3  4  5  6  7]]\n",
+      "\n",
+      " [[ 8  9 10 11 12 13 14 15]]]\n"
      ]
     }
    ],
    "source": [
     "a = np.arange(16)\n",
+    "print(a)\n",
+    "\n",
     "b1 = a.reshape(4, 4)\n",
     "b2 = a.reshape(4, -1)\n",
     "b3 = a.reshape(-1, 4)\n",
     "assert b1.shape == b2.shape == b3.shape\n",
     "assert np.array_equal(b1, b2)\n",
     "assert np.array_equal(b1, b3)\n",
+    "\n",
     "a.resize(4, 4)\n",
     "print(a.shape)\n",
     "a.shape = 16\n",
-    "print(a.shape)"
+    "print(a.shape)\n",
+    "\n",
+    "c = a.reshape(2, 1, 8)\n",
+    "print(c)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0  1  2  3]\n",
+      " [ 4  5  6  7]\n",
+      " [ 8  9 10 11]\n",
+      " [12 13 14 15]]\n",
+      "3 (4, 1, 4)\n"
+     ]
+    }
+   ],
    "source": [
-    "# Что-то про [np.newaxis]"
+    "a = np.arange(16).reshape(4, 4)\n",
+    "print(a)\n",
+    "\n",
+    "b1 = a[:, np.newaxis, :]\n",
+    "b2 = a.reshape(4, 1, 4)\n",
+    "b3 = a.reshape(4, 1, -1)\n",
+    "assert b1.shape == b2.shape == b3.shape\n",
+    "assert np.array_equal(b1, b2)\n",
+    "assert np.array_equal(b1, b3)\n",
+    "print(b1.ndim, b1.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Такие «дополнительные» измерения могуть быть полезны при операциях\n",
+    "с массивами разных размерностей"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Сумма каждой строки a с b:\n",
+      " [[0. 1. 2. 3.]\n",
+      " [0. 1. 2. 3.]\n",
+      " [0. 1. 2. 3.]\n",
+      " [0. 1. 2. 3.]]\n",
+      "Сумма каждого столбца a с b:\n",
+      " [[0. 0. 0. 0.]\n",
+      " [1. 1. 1. 1.]\n",
+      " [2. 2. 2. 2.]\n",
+      " [3. 3. 3. 3.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.zeros((4, 4))\n",
+    "b = np.arange(4)\n",
+    "print('Сумма каждой строки a с b:\\n', a + b)\n",
+    "print('Сумма каждого столбца a с b:\\n', a + b[:, np.newaxis])"
    ]
   },
   {
@@ -754,14 +847,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import matplotlib; matplotlib.use('Agg')  # Если хотим только сохранять картинки\n",
+    "# Если хотим только сохранять картинки, не хотим выводить в окошко\n",
+    "import matplotlib; matplotlib.use('Agg')\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "\n",
     "x = np.linspace(0, np.pi, 100)\n",
     "u = np.sin(x)\n",
     "v = np.cos(x)\n",
-    "plt.figure()\n",
+    "plt.figure()  # новый график\n",
     "plt.plot(x, u, label='sinus')\n",
     "plt.plot(x, v, label='cosinus')\n",
     "plt.legend()\n",
