--- a/1_tables.ipynb
+++ b/1_tables.ipynb
@@ -569,7 +569,138 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Математические операции над массивами"
+    "## Математические операции над массивами\n",
+    "### Некоторые операции над каждым элементом"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x = [0.         1.04719755 2.0943951  3.14159265]\n",
+      "sin(x) = [0.00000000e+00 8.66025404e-01 8.66025404e-01 1.22464680e-16]\n",
+      "exp(x) = [ 1.          2.84965391  8.1205274  23.14069263]\n",
+      "cbrt(x) = [0.         1.0154913  1.27943886 1.46459189]\n",
+      "x^pi = [ 0.          1.15590398 10.20082699 36.46215961]\n",
+      "sqrt(-x) = [0.+0.j         0.+1.02332671j 0.+1.44720251j 0.+1.77245385j]\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = np.linspace(0, np.pi, 4)\n",
+    "print('x =', x)\n",
+    "print('sin(x) =', np.sin(x))\n",
+    "print('exp(x) =', np.exp(x))\n",
+    "print('cbrt(x) =', np.cbrt(x))\n",
+    "print('x^pi =', x**np.pi)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Математические функции, определенные в `np.`, при работе с некомплексными числами не возвращают комплексных чисел, а возвращают `np.nan`. Используйте `np.emath` или явно указывайте, что входное число комплексное"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "nan\n",
+      "sqrt(-x) = [0.+0.j         0.+1.02332671j 0.+1.44720251j 0.+1.77245385j] = [0.+0.j         0.+1.02332671j 0.+1.44720251j 0.+1.77245385j]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python3.7/site-packages/ipykernel_launcher.py:1: RuntimeWarning: invalid value encountered in sqrt\n",
+      "  \"\"\"Entry point for launching an IPython kernel.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.sqrt(-1))\n",
+    "print('sqrt(-x) =', np.emath.sqrt(-x), '=', np.sqrt(-x + 0j))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Некоторые операции над всеми элементами"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a = [ 3  6  9 12 15]\n",
+      "sum(a) = 45\n",
+      "min(a) = 3 max(a) = 15\n",
+      "std(a) = 4.242640687119285\n",
+      "mean(a) = 9.0\n",
+      "median(a) = 9.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.arange(3, 18, 3)\n",
+    "print('a =', a)\n",
+    "print('sum(a) =', np.sum(a))\n",
+    "print('min(a) =', np.min(a), 'max(a) =', np.max(a))\n",
+    "print('std(a) =', np.std(a))\n",
+    "print('mean(a) =', np.mean(a))\n",
+    "print('median(a) =', np.median(a))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Для этих операций можно выбрать ось, вдоль которой они будут выполнены"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0  1  2  3]\n",
+      " [ 4  5  6  7]\n",
+      " [ 8  9 10 11]\n",
+      " [12 13 14 15]]\n",
+      "[24 28 32 36]\n",
+      "[ 6 22 38 54]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.arange(16).reshape(4, 4)\n",
+    "print(a)\n",
+    "print(np.sum(a, axis=0))\n",
+    "print(np.sum(a, axis=1))"
    ]
   },
   {
@@ -577,6 +708,29 @@
    "metadata": {},
    "source": [
     "## Поиск по упорядеченному массиву"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0. 1. 3. 5. 7.]\n",
+      "[0. 1. 3.] 3.141592653589793 [5. 7.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.array([1, 5, 3, 0, 7], dtype=np.float)\n",
+    "a.sort()\n",
+    "print(a)\n",
+    "x = np.pi\n",
+    "i = np.searchsorted(a, x)\n",
+    "print(a[:i], x, a[i:])"
    ]
   },
   {
@@ -595,7 +749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -610,7 +764,7 @@
     }
    ],
    "source": [
-    "with open('file.dat') as f:\n",
+    "with open('file.dat', encoding='utf8') as f:\n",
     "    pairs = [line.split() for line in f]\n",
     "\n",
     "for x, y in pairs:\n",
@@ -721,6 +875,56 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "number,square,cube\n",
+      "-10,100,-1000\n",
+      "-9,81,-729\n",
+      "-8,64,-512\n",
+      "-7,49,-343\n",
+      "-6,36,-216\n",
+      "-5,25,-125\n",
+      "-4,16,-64\n",
+      "-3,9,-27\n",
+      "-2,4,-8\n",
+      "-1,1,-1\n",
+      "0,0,0\n",
+      "1,1,1\n",
+      "2,4,8\n",
+      "3,9,27\n",
+      "4,16,64\n",
+      "5,25,125\n",
+      "6,36,216\n",
+      "7,49,343\n",
+      "8,64,512\n",
+      "9,81,729\n",
+      "10,100,1000\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "\n",
+    "n = np.arange(-10, 11)\n",
+    "square = n**2\n",
+    "cube = n**3\n",
+    "with open('d1.csv', 'w', encoding='utf8') as f:\n",
+    "    f.write('number,square,cube' + os.linesep)\n",
+    "    for x1, x2, x3 in zip(n, square, cube):\n",
+    "        f.write('{},{},{}{}'.format(x1, x2, x3, os.linesep))\n",
+    "        \n",
+    "with open('d1.csv', encoding='utf8') as f:\n",
+    "    print(f.read())"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -728,10 +932,160 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    number  square  cube\n",
+      "0      -10     100 -1000\n",
+      "1       -9      81  -729\n",
+      "2       -8      64  -512\n",
+      "3       -7      49  -343\n",
+      "4       -6      36  -216\n",
+      "5       -5      25  -125\n",
+      "6       -4      16   -64\n",
+      "7       -3       9   -27\n",
+      "8       -2       4    -8\n",
+      "9       -1       1    -1\n",
+      "10       0       0     0\n",
+      "11       1       1     1\n",
+      "12       2       4     8\n",
+      "13       3       9    27\n",
+      "14       4      16    64\n",
+      "15       5      25   125\n",
+      "16       6      36   216\n",
+      "17       7      49   343\n",
+      "18       8      64   512\n",
+      "19       9      81   729\n",
+      "20      10     100  1000\n",
+      "number,square,cube\n",
+      "-10,100,-1000\n",
+      "-9,81,-729\n",
+      "-8,64,-512\n",
+      "-7,49,-343\n",
+      "-6,36,-216\n",
+      "-5,25,-125\n",
+      "-4,16,-64\n",
+      "-3,9,-27\n",
+      "-2,4,-8\n",
+      "-1,1,-1\n",
+      "0,0,0\n",
+      "1,1,1\n",
+      "2,4,8\n",
+      "3,9,27\n",
+      "4,16,64\n",
+      "5,25,125\n",
+      "6,36,216\n",
+      "7,49,343\n",
+      "8,64,512\n",
+      "9,81,729\n",
+      "10,100,1000\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.DataFrame({'number': n, 'square': square, 'cube': cube})\n",
+    "print(df)\n",
+    "df.to_csv('d2.csv', index=False)  # index=False — не выводить номер строки\n",
+    "\n",
+    "with open('d2.csv') as f:\n",
+    "    print(f.read())"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Чтение и запись JSON"
+    "# Чтение и запись [JSON](https://ru.wikipedia.org/wiki/JSON)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\"electron\": {\"mass\": 1, \"charge\": 1}, \"photon\": {}, \"positron\": {\"mass\": 1, \"charge\": -1}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "import json\n",
+    "\n",
+    "d = {\n",
+    "    'electron':{\n",
+    "        'mass':1,\n",
+    "        'charge':1,\n",
+    "    },\n",
+    "    'photon':{\n",
+    "    },\n",
+    "    'positron':{\n",
+    "        'mass':1,\n",
+    "        'charge':-1,\n",
+    "    },\n",
+    "}\n",
+    "\n",
+    "with open('particles.json', 'w') as f:\n",
+    "    json.dump(d, f)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\"electron\": {\"mass\": 1, \"charge\": 1}, \"photon\": {}, \"positron\": {\"mass\": 1, \"charge\": -1}}\n",
+      "{'mass': 1, 'charge': 1}\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open('particles.json', 'r') as f:\n",
+    "    print(f.read())\n",
+    "    f.seek(0)\n",
+    "    p = json.load(f)\n",
+    "    print(p['electron'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open('simple.json', 'w') as f:\n",
+    "    f.write(\"\"\"\n",
+    "        {\n",
+    "            \"key\": 1,\n",
+    "            \"key2\": 2\n",
+    "        }\n",
+    "    \"\"\")\n",
+    "\n",
+    "with open('simple.json', 'r') as f:\n",
+    "    d = json.load(f)\n",
+    "print(d['key2'])"
    ]
   },
   {
@@ -794,13 +1148,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## HDF"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Чтение NetCDF\n",
     "\n",
     "Возьмём файл с температурой поверхности океана с [сайта UCAR](https://www.unidata.ucar.edu/software/netcdf/examples/files.html): <https://www.unidata.ucar.edu/software/netcdf/examples/tos_O1_2001-2002.nc>"
@@ -843,7 +1190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -856,8 +1203,8 @@
     "u = np.sin(x)\n",
     "v = np.cos(x)\n",
     "plt.figure()  # новый график\n",
-    "plt.plot(x, u, label='sinus')\n",
-    "plt.plot(x, v, label='cosinus')\n",
+    "plt.plot(x, u, label='sine')\n",
+    "plt.plot(x, v, label='cosine')\n",
     "plt.legend()\n",
     "plt.grid()\n",
     "plt.savefig('matplotlib.png')"
@@ -870,6 +1217,29 @@
     "`matplotlib.png`\n",
     "![matplotlib image](matplotlib.png)\n",
     "## Контурные карты"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "grid = np.linspace(-1, 1, 10)\n",
+    "x, y = np.meshgrid(grid, grid)\n",
+    "z = np.random.rand(*x.shape)\n",
+    "plt.figure(figsize=(5, 5))\n",
+    "plt.contourf(x, y, z)\n",
+    "plt.grid()\n",
+    "plt.savefig('matplotlib_contour.png')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`matplotlib_contour.png`\n",
+    "![matplotlib contour](matplotlib_contour.png)"
    ]
   },
   {
