Restart and run all

--- a/1_tables.ipynb
+++ b/1_tables.ipynb
@@ -157,9 +157,9 @@
       " [0.0e+000 4.9e-324 9.9e-324 1.5e-323 2.0e-323 2.5e-323 3.0e-323 3.5e-323\n",
       " 4.0e-323 4.4e-323]\n",
       "Тоже мусор, но разложенный по-другому:\n",
-      " [[2.31584178e+077 2.31584178e+077 2.96439388e-323 0.00000000e+000]\n",
-      " [2.31584178e+077 1.61590357e+184 6.86889100e-091 3.73455097e-061]\n",
-      " [3.61296025e+174 1.47862178e+185 3.99910963e+252 8.80225074e-309]]\n"
+      " [[ 1.28822975e-231 -1.73059551e-077  2.96439388e-323  0.00000000e+000]\n",
+      " [ 1.73765864e-152  4.47032019e-038  6.19772580e-091  5.88362143e-062]\n",
+      " [ 2.36816042e+179  5.24825030e+174  3.99910963e+252  8.38733469e-309]]\n"
      ]
     }
    ],
@@ -264,11 +264,11 @@
       "[3 3 3 3 3 3 3 3]\n",
       "[3.14159265 3.14159265 3.14159265 3.14159265 3.14159265 3.14159265\n",
       " 3.14159265 3.14159265]\n",
-      "Пустой b:\n",
-      " [2.31584178e+077+2.31584178e+077j 2.41907520e-312+2.14321575e-312j\n",
-      " 2.46151512e-312+2.31297541e-312j 2.35541533e-312+2.05833592e-312j\n",
-      " 2.22809558e-312+2.56761491e-312j 2.48273508e-312+2.05833592e-312j\n",
-      " 2.05833592e-312+2.29175545e-312j 2.07955588e-312+2.14321575e-312j]\n",
+      "«Пустой» b:\n",
+      " [ 1.28822975e-231-2.32034922e+077j -3.95252517e-323+0.00000000e+000j\n",
+      "  2.12199579e-314+0.00000000e+000j  0.00000000e+000+0.00000000e+000j\n",
+      "  1.75871011e-310+3.50977866e+064j  0.00000000e+000+4.34584738e-311j\n",
+      "              nan            +nanj  3.50977942e+064+1.11686770e-308j]\n",
       "Заполненный b:\n",
       " [0.        +3.14159265j 0.        +3.14159265j 0.        +3.14159265j\n",
       " 0.        +3.14159265j 3.14159265+1.j         3.14159265+1.j\n",
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {
     "scrolled": true
    },
@@ -463,13 +463,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[ 0  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15]\n",
       "(4, 4)\n",
       "(16,)\n",
       "[[[ 0  1  2  3  4  5  6  7]]\n",
@@ -500,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -538,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -575,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 18,
    "metadata": {
     "scrolled": true
    },
@@ -588,8 +589,7 @@
       "sin(x) = [0.00000000e+00 8.66025404e-01 8.66025404e-01 1.22464680e-16]\n",
       "exp(x) = [ 1.          2.84965391  8.1205274  23.14069263]\n",
       "cbrt(x) = [0.         1.0154913  1.27943886 1.46459189]\n",
-      "x^pi = [ 0.          1.15590398 10.20082699 36.46215961]\n",
-      "sqrt(-x) = [0.+0.j         0.+1.02332671j 0.+1.44720251j 0.+1.77245385j]\n"
+      "x^pi = [ 0.          1.15590398 10.20082699 36.46215961]\n"
      ]
     }
    ],
@@ -611,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -645,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -680,7 +680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -712,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -749,7 +749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -773,7 +773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -799,7 +799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -828,7 +828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -876,7 +876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -933,7 +933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1008,17 +1008,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{\"electron\": {\"mass\": 1, \"charge\": 1}, \"photon\": {}, \"positron\": {\"mass\": 1, \"charge\": -1}}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import json\n",
     "\n",
@@ -1041,7 +1033,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1063,7 +1055,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1107,7 +1099,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1155,7 +1147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1164,7 +1156,7 @@
        "273.07037"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1190,7 +1182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1221,7 +1213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
