Update 3rd seminar

--- a/3/nonlinear_ls.tex
+++ b/3/nonlinear_ls.tex
@@ -80,7 +80,7 @@ $$
 Так как $J^TJ$ положительно определена (докажите сами), то эта квадратичная форма имеет минимум.
 Этот минимум может быть найден по следующей формуле:
 \begin{equation}
-J^TJ \Delta\m = J^T \y. \label{eq.Gauss_Newton}
+J^TJ \Delta\m = J^T (\y - \f). \label{eq.Gauss_Newton}
 \end{equation}
 На практике, значение $\Delta\m$ часто умножают на константу $K: 0 < K \leq 1$:
 \begin{equation}
@@ -98,7 +98,7 @@ J^TJ \Delta\m = J^T \y. \label{eq.Gauss_Newton}
 Таким образом, сложное поведение функции, например седловина или резкое изменение производных, может оказаться серьёзным препятствием к сходимости.
 Одним из вариантов решения проблемы является модификация уравнения ~\eqref{eq.Gauss_Newton} следующим образом:
 \begin{equation}
-J^TJ \Delta\m + \lambda^{(k)} I \Delta\m = J^T \y, \label{eq.LM}
+J^TJ \Delta\m + \lambda^{(k)} I \Delta\m = J^T (\y -\f), \label{eq.LM}
 \end{equation}
 где $I$ --- единичная матрица, а $\lambda^{(k)}$ --- безразмерный положительный коэффициент, который изменяется согласно определённому алгоритму.
 Видно, что величина $\Delta$ монотонно убывает с $\lambda$, что позволяет регулировать шаг правильно подбирая этот коэффициент.
