Add iterator-based file reading for 1_list_vs_dict.ipynb

--- a/1_list_vs_dict.ipynb
+++ b/1_list_vs_dict.ipynb
@@ -50,7 +50,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "8.972814373 seconds\n",
+      "6.857442791999802 seconds\n",
       "Most common word: и\n"
      ]
     }
@@ -87,7 +87,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.029298053000001545 seconds\n",
+      "0.008328355000230658 seconds\n",
       "Most common word: и\n"
      ]
     }
@@ -124,7 +124,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.009541513000000279 seconds\n",
+      "0.003754159999971307 seconds\n",
       "Most common word: и\n"
      ]
     }
@@ -135,6 +135,45 @@
     "t = monotonic()\n",
     "\n",
     "c = Counter(words)\n",
+    "most_common = c.most_common(1)[0][0]\n",
+    "\n",
+    "print(monotonic() - t, 'seconds')\n",
+    "\n",
+    "print('Most common word:', most_common)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Чтение с использованием итераторов"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.010588468000150897 seconds\n",
+      "Most common word: и\n"
+     ]
+    }
+   ],
+   "source": [
+    "from collections import Counter\n",
+    "import itertools\n",
+    "\n",
+    "t = monotonic()\n",
+    "\n",
+    "c = Counter()\n",
+    "with open('bar.txt') as f:\n",
+    "    for x in map(lambda x: x.split(), iter(f)):\n",
+    "        c.update(x)\n",
+    "\n",
     "most_common = c.most_common(1)[0][0]\n",
     "\n",
     "print(monotonic() - t, 'seconds')\n",
@@ -166,7 +205,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.6.12"
   }
  },
  "nbformat": 4,
